# fast-streebog

./: .clang-format  .gitignore  CMakeLists.txt  README.md  VERSION
.github/workflows/: release-windows.yml  release.yml
fast-streebog-lib/: CMakeLists.txt
fast-streebog-lib/include/: fast_macros.h  fast_streebog.h  streebog_cpu.h  streebog_impl.h  streebog_precalc.h
fast-streebog-lib/linux_x64_avx2/: streebog_add_512_avx2.S  streebog_key_schedule_avx2.S  streebog_l_transform_avx2.S  streebog_p_transform_avx2.S  streebog_precalc_tables_avx2.S  streebog_s_transform_avx2.S  streebog_xor_512_avx2.S
fast-streebog-lib/linux_x64_ssse3/: streebog_add_512_ssse3.S  streebog_key_schedule_ssse3.S  streebog_l_transform_ssse3.S  streebog_p_transform_ssse3.S  streebog_precalc_tables_ssse3.S  streebog_s_transform_ssse3.S  streebog_xor_512_ssse3.S
fast-streebog-lib/src/: fast_streebog.c
fast-streebog-lib/unix_arm64/: streebog_add_512.S  streebog_constants.S  streebog_key_schedule.S  streebog_l_transform.S  streebog_p_transform.S  streebog_precalc_tables.S  streebog_s_transform.S  streebog_xor_512.S
fast-streebog-lib/windows/: streebog_add_512.asm  streebog_e_transform.asm  streebog_g_n.asm  streebog_l_transform.asm  streebog_l_transform_opt.asm  streebog_p_transform.asm
fast-streebog-lib/windows_x64/: streebog_key_schedule.asm  streebog_l_transform.asm  streebog_precalc_tables.asm  streebog_s_transform.asm  streebog_xor_512.asm
fast-streebog-lib/windows_x64_avx2/: streebog_add_512_avx2.asm  streebog_key_schedule_avx2.asm  streebog_l_transform_avx2.asm  streebog_p_transform_avx2.asm  streebog_precalc_tables_avx2.asm  streebog_s_transform_avx2.asm  streebog_xor_512_avx2.asm
fast-streebog-lib/windows_x64_avx512/: streebog_add_512_avx512.asm  streebog_key_schedule_avx512.asm  streebog_l_transform_avx512.asm  streebog_p_transform_avx512.asm  streebog_precalc_tables_avx512.asm  streebog_s_transform_avx512.asm  streebog_xor_512_avx512.asm
fast-streebog-lib/windows_x64_sse2/: streebog_add_512_sse2.asm  streebog_key_schedule_sse2.asm  streebog_l_transform_sse2.asm  streebog_p_transform_sse2.asm  streebog_s_transform_sse2.asm  streebog_xor_512_sse2.asm
fast-streebog-lib/windows_x64_ssse3/: streebog_add_512_ssse3.asm  streebog_key_schedule_ssse3.asm  streebog_l_transform_ssse3.asm  streebog_p_transform_ssse3.asm  streebog_precalc_tables_ssse3.asm  streebog_s_transform_ssse3.asm  streebog_xor_512_ssse3.asm
fast-streebog-tests/: CMakeLists.txt
fast-streebog-tests/src/: algo_test.cpp  performance_test.cpp
tools/: conver_tables_for_linux.py  convert_c_constants.py  convert_tables_to_gas.py  generate_precalc_asm.c  generate_precalc_asm_v2.c  generate_precalc_tables.c
